Fix right side margin when viewed on small screen

--- a/frontend-service/src/layout.scss
+++ b/frontend-service/src/layout.scss
@@ -10,6 +10,9 @@ $desktop-up: "only screen and (min-width : 1224px)";
 
   @media only screen and (min-width : $break-small) {
     margin-left: unset;
+  }
+
+  @media only screen and (min-width : $break-large) {
     margin-right: unset;
   }
 }
